@@ -1,9 +1,7 @@
-find_program(FIXUP vita-elf-create)
-find_program(MAKE_FSELF vita-make-fself)
-find_program(MAKE_SFO vita-mksfoex)
+include("${VITASDK}/share/vita.cmake" REQUIRED)
+
 find_program(OBJCOPY ${cross_prefix}objcopy)
 find_file(NIDDB db.json PATHS ${VITASDK} ${VITASDK}/bin ${VITASDK}/share)
-find_program(STRIP ${cross_prefix}strip)
 
 set(OS_DEFINES IOAPI_NO_64)
 set(OS_DEFINES ${OS_DEFINES} PARENT_SCOPE)
@@ -37,34 +35,16 @@ add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/backdrop.o
                    COMMAND ${OBJCOPY_CMD} backdrop.png ${CMAKE_CURRENT_BINARY_DIR}/backdrop.o
                    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_custom_target(${BINARY_NAME}.velf ALL
-                  ${STRIP} --strip-unneeded -go ${BINARY_NAME}-stripped.elf ${BINARY_NAME}.elf
-                  COMMAND ${FIXUP} ${BINARY_NAME}-stripped.elf ${BINARY_NAME}.velf ${NIDDB}
-                  DEPENDS ${BINARY_NAME}.elf)
-
-add_custom_target(sce_sys ${CMAKE_COMMAND} -E make_directory sce_sys)
-
-add_custom_target(param.sfo
-                  ${MAKE_SFO} ${PROJECT_NAME} -s TITLE_ID=MGBA00001 sce_sys/param.sfo
-                  DEPENDS sce_sys)
-
-add_custom_target(eboot.bin
-                  ${MAKE_FSELF} -s ${BINARY_NAME}.velf eboot.bin
-                  DEPENDS ${BINARY_NAME}.velf)
+vita_create_self(${BINARY_NAME}.self ${BINARY_NAME}.elf)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/template.xml.in ${CMAKE_CURRENT_BINARY_DIR}/template.xml)
 
-add_custom_target(livearea
-                  ${CMAKE_COMMAND} -E make_directory sce_sys/livearea/contents
-                  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/icon0.png sce_sys
-                  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/pic0.png sce_sys
-                  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/template.xml sce_sys/livearea/contents
-                  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/bg.png sce_sys/livearea/contents
-                  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/startup.png sce_sys/livearea/contents
-                  DEPENDS sce_sys)
-
-add_custom_target(${BINARY_NAME}.vpk ALL
-                  zip -qr ${BINARY_NAME}.vpk sce_sys eboot.bin
-                  DEPENDS livearea eboot.bin param.sfo)
+vita_create_vpk(${BINARY_NAME}.vpk MGBA00001 ${BINARY_NAME}.self
+                NAME ${PROJECT_NAME}
+                FILE ${CMAKE_CURRENT_SOURCE_DIR}/icon0.png sce_sys/icon0.png
+                FILE ${CMAKE_CURRENT_SOURCE_DIR}/pic0.png sce_sys/pic0.png
+                FILE ${CMAKE_CURRENT_SOURCE_DIR}/bg.png sce_sys/livearea/contents/bg.png
+                FILE ${CMAKE_CURRENT_SOURCE_DIR}/startup.png sce_sys/livearea/contents/startup.png
+                FILE ${CMAKE_CURRENT_BINARY_DIR}/template.xml sce_sys/livearea/contents/template.xml)
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME}.vpk DESTINATION . COMPONENT ${BINARY_NAME}-psp2)
